--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Clean",
   "main": "./lib/clean",
   "version": "0.7.0",
-  "description": "Distraction free writing.",
+  "description": "Distraction free writing. Based on the Zen package.",
   "activationEvents": [
     "clean:toggle"
   ],
